; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/steering/extr_dr_matcher.c_dr_mask_is_dmac_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/steering/extr_dr_matcher.c_dr_mask_is_dmac_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5dr_match_spec = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx5dr_match_spec*)* @dr_mask_is_dmac_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dr_mask_is_dmac_set(%struct.mlx5dr_match_spec* %0) #0 {
  %2 = alloca %struct.mlx5dr_match_spec*, align 8
  store %struct.mlx5dr_match_spec* %0, %struct.mlx5dr_match_spec** %2, align 8
  %3 = load %struct.mlx5dr_match_spec*, %struct.mlx5dr_match_spec** %2, align 8
  %4 = getelementptr inbounds %struct.mlx5dr_match_spec, %struct.mlx5dr_match_spec* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %12, label %7

7:                                                ; preds = %1
  %8 = load %struct.mlx5dr_match_spec*, %struct.mlx5dr_match_spec** %2, align 8
  %9 = getelementptr inbounds %struct.mlx5dr_match_spec, %struct.mlx5dr_match_spec* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br label %12

12:                                               ; preds = %7, %1
  %13 = phi i1 [ true, %1 ], [ %11, %7 ]
  %14 = zext i1 %13 to i32
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
